hphp/test/zend/bad/Zend/tests/use_const/no_global_fallback.php
<?php

require 'includes/global_baz.php';

use const foo\bar\baz;
var_dump(baz);

?>
